# protego

./: .env.example  .gitignore  Dockerfile  Readme.md  pyproject.toml
src/cyber_agent/: __init__.py  config.py  graph.py  hitl_mailer.py  llm.py  state.py
src/cyber_agent/api/: main.py
src/cyber_agent/nodes/: _parse_utils.py  action.py  bec_agent.py  feedback_logger.py  invoice_agent.py  orchestrator.py  phishing_agent.py  preprocess.py  risk_scoring.py
src/cyber_agent/preprocessing/: ocr.py
src/cyber_agent/rag/: embeddings.py  retriever.py
src/cyber_agent/tools/: email_baseline.py  html_analysis.py  safe_browsing.py  urlscan.py  vendor_lookup.py
tests/: test_bec_rag.py  test_hitl_hardening.py  test_html_analysis.py  test_invoice_agent.py  test_orchestrator_phishing.py  test_parse_utils.py
tests/integration/: conftest.py  test_html_analysis.py  test_smtp_hitl.py  test_threat_intel.py  test_watsonx_graph.py  test_watsonx_llm.py
